--- a/microsoft_making_movies_analysis.ipynb
+++ b/microsoft_making_movies_analysis.ipynb
@@ -13,10 +13,9 @@
     "\n",
     "Please fill out:\n",
     "* Student name: Elizabeth Webster\n",
-    "* Student pace: part time\n",
+    "* Student pace: Flex\n",
     "* Scheduled project review date/time: \n",
-    "* Instructor name: Ahbineet  \n",
-    "* Blog post URL:"
+    "* Instructor name: Ahbineet Kulkarni"
    ]
   },
   {
